Se realizo el listado completo de los datos de auth-service y user-service por medio del feign, dto